--- a/ue03/src/_modules/canvas/canvas.sass
+++ b/ue03/src/_modules/canvas/canvas.sass
@@ -6,5 +6,9 @@
         width: 100%
         image-rendering: pixelated
 
+        position: relative
+        left: 50%
+        transform: translateX(-50%)
+
     &__text
         text-align: center
